Fix theme switch overflow

--- a/audits/styles.css
+++ b/audits/styles.css
@@ -457,6 +457,7 @@ h1 {
       top: 0;
       left: 0;
       width: 100%;
+      box-sizing: border-box;
       display: grid;
       grid-template-columns: auto 1fr auto;
       align-items: center;
